<?xml version="1.0"?>
<package>
  <name>moveit_goal_builder</name>
  <version>0.0.0</version>
  <description>The moveit_goal_builder package</description>
  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/moveit_goal_builder</url> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <export>
  </export>
</package>
