<?xml version="1.0"?>
<package>
  <name>moveit_goal_builder</name>
  <version>0.1.0</version>
  <description>The moveit_goal_builder package</description>
  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/moveit_goal_builder</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>shape_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
